# Beer-Game

./: CMakeLists.txt  README.md
docs/html/: PlayerEvent_8h_source.html  annotated.html  classGame-members.html  classGame.html  classInstructor-members.html  classInstructor.html  classMainWindow-members.html  classMainWindow.html  classOrder-members.html  classOrder.html  classOrder__coll__graph.md5  classOrder__inherit__graph.map  classOrder__inherit__graph.md5  classPlayer-members.html  classPlayer.html  classPlayerEvent-members.html  classPlayerEvent.html  classPlayerEvent__inherit__graph.map  classPlayerEvent__inherit__graph.md5  classSecDialog-members.html  classSecDialog.html  classSecDialog__coll__graph.md5  classSecDialog__inherit__graph.map  classSecDialog__inherit__graph.md5  classShipment-members.html  classShipment.html  classShipment__coll__graph.map  classes.html  (+57 more)
se-03-team-27-master/: CMakeLists.txt  README.md  references.txt
se-03-team-27-master/src/: CMakeLists.txt  PlayerEvent.cpp  PlayerEvent.h  beer-game.pro.user.1e5eee8.22  creategamedialog.cpp  creategamedialog.h  creategamedialog.ui  currentgamesdialog.cpp  currentgamesdialog.h  game.cpp  game.h  instructor.cpp  instructor.h  mainwindow.cpp  player.cpp  player.h  playerdialog.cpp  playerdialog.h  secdialog.cpp  secdialog.h  secdialog.ui
src/: CMakeLists.txt  PlayerEvent.cpp  PlayerEvent.h  beer-game.pro  creategamedialog.ui  currentgamesdialog.ui  game.cpp  game.h  instructor.h  main.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playerdialog.ui
test/: CMakeLists.txt  tests.cpp
(+216 files in other folders)
